--- a/index.html
+++ b/index.html
@@ -47,9 +47,69 @@
         </div>
       </div>
     </header>
-
-    <section>company</section>
-    <section>feature</section>
+      <section class="companies-section">
+             <div class="container">
+              <h4>
+                The world’s best companies rely on UsabilityHub to make better design
+          decisions. 
+              </h4>
+             </div>
+             <div class="logos flex">
+                 <img src="./assets/asset_3.png" alt="">
+                 <img src="./assets/asset_4.png" alt="">
+                 <img src="./assets/asset_5.png" alt="">
+                 <img src="./assets/asset_6.png" alt="">
+                 <img src="./assets/asset_7.png" alt="">
+                 <img src="./assets/asset_8.png" alt="">
+   </div>
+      </div>
+      </section>
+    <section class="features-section">
+      <div class="container">
+        <div class="section-header flex">
+          <h2>Your user research Swiss Army knife</h2>
+          <a href="#" class="primary-button">See all features <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+        </div>
+        <div class="features-area flex">
+          <div class="feature-card flex">
+            <img src="./assets/asset 11.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+          </div>
+          <div class="feature-card flex">
+            <img src="./assets/asset 13.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+          </div>
+          <div class="feature-card flex">
+            <img src="./assets/asset 14.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+          </div>
+          <div class="feature-card flex">
+            <img src="./assets/asset 15.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+          </div>
+          <div class="feature-card flex">
+            <img src="./assets/asset 16.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+          </div>
+          <div class="feature-card flex">
+            <img src="./assets/asset 17.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information.</p>
+            <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section>big feature</section>
     <section>big feature2</section>
     <section>example</section>
