--- a/index.html
+++ b/index.html
@@ -72,37 +72,37 @@
         </div>
         <div class="features-area flex">
           <div class="feature-card flex">
-            <img src="./assets/asset 11.svg" alt="">
+            <img src="./assets/asset_11.svg" alt="">
             <h3>Card Sorting</h3>
             <p>Discover how people group and label information.</p>
             <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
           </div>
           <div class="feature-card flex">
-            <img src="./assets/asset 13.svg" alt="">
+            <img src="./assets/asset_13.svg" alt="">
             <h3>Card Sorting</h3>
             <p>Discover how people group and label information.</p>
             <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
           </div>
           <div class="feature-card flex">
-            <img src="./assets/asset 14.svg" alt="">
+            <img src="./assets/asset_14.svg" alt="">
             <h3>Card Sorting</h3>
             <p>Discover how people group and label information.</p>
             <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
           </div>
           <div class="feature-card flex">
-            <img src="./assets/asset 15.svg" alt="">
+            <img src="./assets/asset_15.svg" alt="">
             <h3>Card Sorting</h3>
             <p>Discover how people group and label information.</p>
             <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
           </div>
           <div class="feature-card flex">
-            <img src="./assets/asset 16.svg" alt="">
+            <img src="./assets/asset_16.svg" alt="">
             <h3>Card Sorting</h3>
             <p>Discover how people group and label information.</p>
             <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
           </div>
           <div class="feature-card flex">
-            <img src="./assets/asset 17.svg" alt="">
+            <img src="./assets/asset_17.svg" alt="">
             <h3>Card Sorting</h3>
             <p>Discover how people group and label information.</p>
             <a href="#" class="primary-button">Learn more <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
@@ -110,11 +110,104 @@
         </div>
       </div>
     </section>
-    <section>big feature</section>
-    <section>big feature2</section>
-    <section>example</section>
-    <section>CTA</section>
-    <footer>Footer</footer>
+    <section class="big-features-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-img">
+          <img src="./assets/asset_18.png" alt="">
+        </div>
+        <div class="feature-desc">
+          <h4>Effortless validation for</h4>
+          <h3>Design professionals</h3>
+          <p>
+            Test interfaces, interation flows, iconography and more, to help you
+            create intuitive and delightful experiences for your users.
+          </p>
+        </div>
+      </div>
+    </section>
+   <section class="big-features-section">
+      <div class="container flex big-feature-container" id="spl-feature">
+        <div class="feature-desc">
+          <h4>Optimisation for</h4>
+          <h3>Marketers</h3>
+          <p>
+            Fine-tune landing pages, messaging, and creative, helping you
+            optimise conversion rates on marketing campaigns and product
+            launches.
+          </p>
+        </div>
+        <div class="feature-img">
+          <img src="./assets/asset_21.png" alt="">
+        </div>
+      </div>
+    </section>
+    <section class="big-features-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-img">
+          <img src="./assets/asset_24.png" alt="">
+        </div>
+        <div class="feature-desc">
+          <h4>Easier decision making for</h4>
+          <h3>Product managers</h3>
+          <p>
+            Ensure you’re delivering the right features to the right customers
+            by validating product concepts with your target audience
+          </p>
+        </div>
+      </div>
+    </section>
+    <div class="container">
+        <div class="section-header flex">
+          <h2>One platform, endless possibilities</h2>
+          <a href="#" class="primary-button">See more examples <i class="fa-solid fa-right-long" aria-hidden="true"></i></a>
+        </div>
+        <div class="example-area flex">
+          <a href="#" class="example-card flex">
+            <h3>Can users complete a task in my software interface?</h3>
+          </a>
+          <a href="#" class="example-card flex">
+            <h3>Can users complete a task in my software interface?</h3>
+          </a>
+          <a href="#" class="example-card flex">
+            <h3>Can users complete a task in my software interface?</h3>
+          </a>
+          <a href="#" class="example-card flex">
+            <h3>Can users complete a task in my software interface?</h3>
+          </a>
+        </div>
+      </div>
+    <footer>
+      <div class="container flex footer-container">
+        <a href="#">
+          <img src="assets/asset 1.png" class="company-logo" alt="logo">
+        </a>
+
+        <div class="link-column flex">
+          <h4>Products</h4>
+          <a href="#">Overview</a>
+          <a href="#">Pricing</a>
+          <a href="#">Usability Hub</a>
+          <a href="#">Customers Page</a>
+          <a href="#">Status Page</a>
+        </div>
+        <div class="link-column flex">
+          <h4>Methodologies</h4>
+          <a href="#">Overview</a>
+          <a href="#">Pricing</a>
+          <a href="#">Usability Hub</a>
+          <a href="#">Customers Page</a>
+          <a href="#">Status Page</a>
+        </div>
+        <div class="link-column flex">
+          <h4>Resources</h4>
+          <a href="#">Overview</a>
+          <a href="#">Pricing</a>
+          <a href="#">Usability Hub</a>
+          <a href="#">Customers Page</a>
+          <a href="#">Status Page</a>
+        </div>
+      </div>
+    </footer>
     <section>subfooter</section>
   </body>
 </html>
